--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
       <div class="header-icons">
         <a aria-label="Send email" href="mailto:{{site.email}}"><i class="icon fa fa-envelope"></i></a>
         <a aria-label="My Twitter" href="https://twitter.com/{{site.twitter_username}}" target="_blank"><i class="icon fa fa-twitter" aria-hidden="true"></i></a>
-        <a aria-label="My Linked In" href="www.linkedin.com/in/{{site.linkedin_username}}" target="_blank"><i class="icon fa fa-linkedin" aria-hidden="true"></i></a>
+        <a aria-label="My Linked In" href="https://www.linkedin.com/in/{{site.linkedin_username}}" target="_blank"><i class="icon fa fa-linkedin" aria-hidden="true"></i></a>
         <a aria-label="My Github" href="https://github.com/{{site.github_username}}" target="_blank"><i class="icon fa fa-github-alt" aria-hidden="true"></i></a>
       </div>
       <div class="header-links">
