--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,30 +1,55 @@
  <div class="user-details">
   <h1> My Expertise </h1>
   <p> {{site.user_description}} </p>
+</div> 
+<div class="user-details-spec">
+  <h2> Data Science skills </h2>
 </div>
   <div class="user">
     <div class="tech">
-      <h2>Design</h2>
-      <i class="devicon-html5-plain-wordmark"></i>
-      <i class="devicon-bootstrap-plain-wordmark colored"></i>
-      <i class="devicon-sass-original colored"></i>
-      <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
-        Vinyl XOXO lumbersexual</p>
-    </div>
-    <div class="tech">
       <h2>Code</h2>
-      <i class="devicon-javascript-plain colored"></i>
+      <i class="devicon-python-plain-wordmark"></i>
+      <i class="devicon-cplusplus-line-wordmark colored"></i>
       <i class="devicon-react-original-wordmark colored"></i>
-      <i class="devicon-nodejs-plain-wordmark"></i>
-      <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
-        Vinyl XOXO lumbersexual</p>
+      <p>Experienced coding in Python, C++, React, Javascript and R</p>
     </div>
     <div class="tech">
-      <h2>Tools</h2>
-      <i class="devicon-git-plain"></i>
-      <i class="devicon-gulp-plain colored"></i>
-      <i class="devicon-atom-original-wordmark"></i>
-      <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
-        Vinyl XOXO lumbersexual</p>
+      <h2>AI / ML</h2>
+      <img src="https://upload.wikimedia.org/wikipedia/commons/1/10/PyTorch_logo_icon.svg" alt="Pytorch" width="45">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/0/05/Scikit_learn_logo_small.svg" alt="Scikit" width="100">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/3/31/NumPy_logo_2020.svg" alt="Numpy" width="80">
+      <!-- <i class="devicon-atom-original-wordmark"></i> -->
+      <p>Deep Learning using Pytorch, Scikit learn and Numpy</p>
+    </div>
+    <div class="tech">
+      <h2>Visualize</h2>
+      <img src="https://upload.wikimedia.org/wikipedia/commons/8/84/Matplotlib_icon.svg" alt="Matplotlib" width="70">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/0/03/Plotly_logo.png" alt="Plotly" width="110">
+      <p>Designing visualizations with Matplotlib and Plotly</p>
+    </div>
+</div>
+<div class="user-details-spec">
+  <h2> Data Engineering skills </h2>
+</div>
+  <div class="user">
+    <div class="tech">
+      <h2>Databases</h2>
+      <i class="devicon-oracle-original colored"></i>
+      <i class="devicon-mysql-plain colored"></i>
+      <i class="devicon-postgresql-plain colored"></i>
+      <p>Expert in Oracle, Mysql, Postgresql and Terradata databases</p>
+    </div>
+    <div class="tech">
+      <h2>ETL</h2>
+      <img src="https://icon-library.net//images/database-icon/database-icon-19.jpg" alt="Database" width="65">
+      <!-- <i class="fas fa-database"></i> -->
+      <!-- <i class="devicon-atom-original-wordmark"></i> -->
+      <p>Data Integration using Informatica Powercenter</p>
+    </div>
+    <div class="tech">
+      <h2>BI</h2>
+      <img src="https://upload.wikimedia.org/wikipedia/commons/8/86/Microsoft_Excel_2013_logo.svg" alt="Excel" width="65">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/4/4b/Tableau_Logo.png" alt="Tableau" width="150">
+      <p>Designing dashboards in MS Excel, IBM Cognos and Tableau</p>
     </div>
 </div>
