--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,10 +3,10 @@
   {% include head.html %}
   <body>
       {% include header.html %}
-      <!-- <section id="about">
+      <section id="about">
         {% include about.html %}
       </section>
-      <section id="projects">
+      <!-- <section id="projects">
         {% include projects.html %}
       </section> -->
         {{ content }}
