--- a/_includes/about.html
+++ b/_includes/about.html
@@ -8,7 +8,7 @@
   <div class="user">
     <div class="tech">
       <h2>Code</h2>
-      <i class="devicon-python-plain-wordmark"></i>
+      <i class="devicon-python-plain-wordmark colored"></i>
       <i class="devicon-cplusplus-line-wordmark colored"></i>
       <i class="devicon-react-original-wordmark colored"></i>
       <p>Experienced coding in Python, C++, React, Javascript and R</p>
